tests/dataset/tpc-ds/compiler/go/q54.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq542731821647/001/main.go:295:2: syntax error: unexpected name at64 after top level declaration
